[package]
name = "io-extra"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]

description = "An extension trait for `std::io::Error`, with shorthand constructors for various `std::io::ErrorKind`s."

documentation = "https://docs.rs/io-extra"
homepage = "https://github.com/aatifsyed/io-extra"
repository = "https://github.com/aatifsyed/io-extra"

categories = ["rust-patterns"]
keywords = ["std", "error", "io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
